modificacion de resumen

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h2>Resumen</h2>
     <p>
         Experiencia en área de mecánica automotriz, agrícola, maquina inyectora, tornería y
-        operador de maquina.Poseo habilidades en responsabilidad para trabajar, liderar y controlar equipos, 
-        llevando acabo los objetivos asignados aun en ambientes bajo presión, consiguiendo 
+        operador de maquina.<br/> habilidades en responsabilidad para trabajar, liderar y controlar equipos, 
+        llevando acabo los objetivos asignados aun en ambientes bajo presión, <br/>consiguiendo 
         logros relevantes para la organización. 
     </p>    
     <H2>Datos Personales</H2>
